<resources>
    <string name="app_name">KingRoot</string>
    <string name="kinguser">KingRoot</string>
    <string name="kingroot">KingRoot</string>
    <string name="kinguser_name_upper">KINGUSER</string>
    <string name="kingroot_name_upper">KINGROOT</string>
    <string name="root_authorization_dialog_btn_allow">Allow</string>
    <string name="root_authorization_dialog_btn_deny">Deny</string>
    <string name="root_authorization_open_prompt">Authorization Manager Service was opened</string>
    <string name="root_authorization_empty_tip">No authorization request</string>
    <string name="root_authorization_suggestion">(%1$d%% users allow)</string>
    <string name="root_authorization_allow">Allow</string>
    <string name="root_authorization_deny">Deny</string>
    <string name="root_authorization_ask">Prompt</string>
    <string name="root_authorization_suffix_toast_permission">to get Root permission</string>
    <string name="root_authorization_console_name">ADB Program</string>
    <string name="root_authorization_system_name">System Program</string>
    <string name="root_authorization_socket_file_cannot_rw">Access the file failed</string>
    <string name="root_authorization_use_descript_default">Used: an unknown use of root privilege, please choose carefully</string>
    <string name="root_authorization_use_descript">Used: %1$s</string>
    <string name="root_authorization_title_ask">%1$d app(s) prompt</string>
    <string name="root_authorization_title_allow">%1$d app(s) allow</string>
    <string name="root_authorization_title_deny">%1$d app(s) deny</string>
    <string name="unroot_not_root_note">"You don't have Root permission, removal failed."</string>
    <string name="unroot_warning">Remove Root authorization completely and return to unroot status, proceed?</string>
    <string name="unroot_dialog_title">In progress…</string>
    <string name="unroot_dialog_content">Removing Root permission, please wait.</string>
    <string name="version_update_btn_update">Update</string>
    <string name="version_update_btn_pause">Pause</string>
    <string name="version_update_btn_install">Install</string>
    <string name="version_update_update_checking">Checking for updates…</string>
    <string name="version_update_update_failed">Failed: please try it later</string>
    <string name="version_update_toast_latest_version">Already was the latest version</string>
    <string name="version_update_check_updating_background">Checking for updates, please wait.</string>
    <string name="version_update_update_new_version">Update app</string>
    <string name="version_update_updating_new_version">In progress…</string>
    <string name="version_update_update_new_version_pause">Pause</string>
    <string name="version_update_update_dialog_title">App Upgrade</string>
    <string name="version_update_ku_update_info">New version found</string>
    <string name="version_update_ku_update_bar_title">KingRoot update</string>
    <string name="version_update_ku_update_bar_content">New version was found, recommend to update now.</string>
    <string name="version_update_update_check_fail">Check for updates failed</string>
    <string name="version_update_down_load_fail">Download failed</string>
    <string name="version_update_auto_allow_prompt">Granted</string>
    <string name="version_update_auto_deny_prompt">Denied</string>
    <string name="version_update_hint_size">Size:</string>
    <string name="version_update_hint_version">Version:</string>
    <string name="version_update_feature">"What's new:"</string>
    <string name="version_update_install_title">(Free flow)</string>
    <string name="permission_group_root_manager">RootManager Permissions</string>
    <string name="permission_group_desc_root_manager">Permissions for RootManager</string>
    <string name="permission_group_root_manager_request">RootManager Permissions Request</string>
    <string name="permission_group_desc_root_manager_request">Permissions for RootManager Request</string>
    <string name="permission_group_activity_called_request">Activity Called Permissions Request</string>
    <string name="permission_group_desc_activity_called_request">Permissions for RootManager Request</string>
    <string name="dialog_title_hint">Authorize management notified</string>
    <string name="dialog_title_prompt">Prompt</string>
    <string name="dialog_btn_i_know">OK</string>
    <string name="dialog_btn_clear">Clear</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_label_remember">"Don't ask again"</string>
    <string name="dialog_need_permission_prompt">This operation needs Root permission.</string>
    <string name="dialog_btn_next_time">Next time</string>
    <string name="new_feature_title">New Feature</string>
    <string name="new_feature_content">"Update Description:
1. We combined get root and root authorization function together in this version, for new perfect experience.
2. Root engine update, root success rate is improved to 92%.
3. Purify your system completely, solved problems of device just with one-click."</string>
    <string name="knox_forbid">Forbid KNOX</string>
    <string name="knox_forbid_content">Samsung KNOX detected, which will limit KingRoot ability, and bring annoying reminder. Try to disable KNOX?</string>
    <string name="king_tool_title_build_in_software_uninstall">Uninstall tool</string>
    <string name="king_tool_title_software_uninstall">Uninstall tool</string>
    <string name="king_tool_title_auto_start">Auto-start</string>
    <string name="king_tool_title_root_authorization">Root authorization</string>
    <string name="king_tool_title_kingmaster">Kingmaster</string>
    <string name="uninstall_show_text_format">Uninstall(%d)</string>
    <string name="uninstall_application_info">App info</string>
    <string name="uninstall_unremovable">Unremovable</string>
    <string name="uninstall_warning">Uninstall software</string>
    <string name="uninstall_pre_sys_software_uninstall_warning_format">The %d app(s) you selected will be uninstalled completely and is non-recoverable. Are you sure?</string>
    <string name="uninstall_sys_software_uninstall_warning">Uninstalling the system app may cause system crash, are you sure?</string>
    <string name="uninstall_core_software">Core software</string>
    <string name="uninstall_software_uninstalling_prompting_format">(%1$d/%2$d)</string>
    <string name="uninstall_completed">Finished</string>
    <string name="uninstall_tab_pre_install_software">Pre-installed</string>
    <string name="uninstall_tab_personal_software">Personal</string>
    <string name="uninstall_tab_system_software">System</string>
    <string name="uninstall_dialog_btn_remove">Uninstall</string>
    <string name="uninstall_no_apps_tip">No removable apps</string>
    <string name="auto_start_label_start_format">%1$d app(s) allowed to auto-start</string>
    <string name="auto_start_label_stop_format">%1$d app(s) forbidden to auto-start</string>
    <string name="auto_start_in_boot">Run on startup</string>
    <string name="auto_start_in_background">Run in background</string>
    <string name="auto_start_in_boot_and_background">Run on startup and background</string>
    <string name="auto_start_process_waiting">Processing…</string>
    <string name="auto_start_no_apps">No auto-start apps</string>
    <string name="auto_start_km">Powerful prohibit auto-startup</string>
    <string name="attribute_tag_view_position">view_position_tag</string>
    <string name="attribute_content_description_image">Image</string>
    <string name="attribute_content_description_header">Header</string>
    <string name="repackage_warning_dangerous">Serious risk warning</string>
    <string name="repackage_warning_tip">Authorization manager has been tampered and fails to authorize safely,the system is in danger.</string>
    <string name="repackage_update_now">Re-download</string>
    <string name="setting_title">Settings</string>
    <string name="setting_list_item_root_mgr_page">Root authorization setting</string>
    <string name="setting_list_item_software_help">Instructions</string>
    <string name="setting_list_item_feedback">Feedback</string>
    <string name="setting_list_item_wifi_auto_update">Update automatically (WiFi)</string>
    <string name="setting_list_item_wifi_auto_download">WiFi auto-download</string>
    <string name="setting_list_item_wifi_auto_update_to_latest_version">Update to lastest version automatically</string>
    <string name="setting_list_title_authorization_pop">Authorization Pop</string>
    <string name="setting_unit_second">Seconds</string>
    <string name="setting_unit_item">Items</string>
    <string name="setting_unit_log_count">Requests</string>
    <string name="setting_list_title_give_permission">Authorization</string>
    <string name="setting_list_item_root_authorize">Enable Root authorization</string>
    <string name="setting_list_item_timeout">Authorization count down</string>
    <string name="setting_list_item_default_response">Default timeout</string>
    <string name="setting_list_item_cloud_defense">Smart authorization</string>
    <string name="setting_list_item_su_backup">Backup Root permission</string>
    <string name="setting_list_item_su_version">Su version</string>
    <string name="setting_list_item_app_version">Software version</string>
    <string name="setting_list_item_perfect_unroot">Remove Root permission</string>
    <string name="setting_list_item_survival_mode">Keep the Root upgraded</string>
    <string name="setting_list_item_kr_plug_version">Kernel version</string>
    <string name="setting_su_switch_toast_warning_need_obtain_root">Root access required first</string>
    <string name="setting_su_switch_toast_warning_need_repair_root">Root environment fix required</string>
    <string name="request_dialog_is_requesting_root">Root pending authorization…</string>
    <string name="request_dialog_use">Use:</string>
    <string name="request_dialog_default_use">An unknown use of root privilege, please choose carefully.</string>
    <string name="request_dialog_allow_button">Allow</string>
    <string name="request_dialog_deny_button">Deny</string>
    <string name="request_dialog_choice_15_minutes">15 minutes</string>
    <string name="request_dialog_choice_today">today</string>
    <string name="request_dialog_choice_permanently">permanently</string>
    <string name="request_dialog_remember_permanently">remember permanently</string>
    <string name="request_dialog_remember_in_15_minutes">remember in 15 minutes</string>
    <string name="request_dialog_remember_within_today">remember within today</string>
    <string name="log_title">Records</string>
    <string name="log_title_btn">Records</string>
    <string name="log_open_log">Enable Records</string>
    <string name="log_close_warning">Records not enabled</string>
    <string name="log_empty_tip">Records not available</string>
    <string name="log_limit_time">Log exp</string>
    <string name="log_num_upper_limit">Record cap</string>
    <string name="log_clear">Clear Records</string>
    <string name="log_title_desc_format">"allow &lt;font color='#009688'>%2$s&lt;/font>, forbid &lt;font color='#f36c60'>%1$s&lt;/font>"</string>
    <string name="log_has_cleaned">Records cleared</string>
    <string name="log_clear_note">Are you sure to clean all the log records?</string>
    <string name="log_label_allow">Allow</string>
    <string name="log_label_deny">Deny</string>
    <string name="log_label_today">Today</string>
    <string name="km_title">Kingmaster</string>
    <string name="km_try_it">Try it</string>
    <string name="km_try_download">Download</string>
    <string name="km_downloading">Downloading…</string>
    <string name="km_download_fail">Download failed</string>
    <string name="km_installing">Start…</string>
</resources>