<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dialog_bound_margin" android:layout_marginRight="@dimen/dialog_bound_margin"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/dialog_title_text_size" android:textColor="@color/text_primary_color" android:gravity="center_vertical" android:id="@id/item_title" android:background="@drawable/shape_dialog_common_title_bg" android:paddingLeft="@dimen/common_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="@dimen/dialog_min_width" android:minHeight="@dimen/dialog_title_min_height" android:text="@string/app_name" />
    <View android:background="@color/common_divider" android:layout_width="fill_parent" android:layout_height="@dimen/common_divider_width" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/content_group" android:background="@color/general_light_bg" android:padding="@dimen/common_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.kingroot.kinguser.view.TextProgressBarView android:gravity="center" android:id="@id/progressbar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" />
        <TextView android:textSize="@dimen/dialog_content_text_size" android:textColor="@color/text_primary_color" android:gravity="center" android:id="@id/tip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_weight="1.0" />
    </LinearLayout>
    <View android:id="@id/divider_above_mid_button" android:background="@color/common_divider" android:layout_width="fill_parent" android:layout_height="@dimen/common_divider_width" />
    <Button android:textSize="@dimen/dialog_btn_text_size" android:textColor="@color/dialog_normal_btn_text" android:gravity="center" android:id="@id/mid_button" android:background="@drawable/selector_dialog_common_middle_btn" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/dialog_btn_min_height" android:text="@string/dialog_btn_cancel" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/linearLayoutButtons" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/dialog_btn_min_height">
        <Button android:textSize="@dimen/dialog_btn_text_size" android:textColor="@color/dialog_normal_btn_text" android:id="@id/button_left" android:background="@drawable/selector_dialog_common_left_btn" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/dialog_btn_cancel" android:layout_weight="1.0" />
        <View android:background="@color/common_divider" android:layout_width="@dimen/common_divider_width" android:layout_height="fill_parent" />
        <Button android:textSize="@dimen/dialog_btn_text_size" android:textColor="@color/dialog_highlight_btn_text" android:id="@id/button_right" android:background="@drawable/selector_dialog_common_right_btn" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/version_update_btn_pause" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>